# oe-alliance-e2-skindefault

./: Makefile.am  configure.ac  skin.xml  skin_default.xml  skin_default_templates.xml
DefaultFHD/: Makefile.am  skin.xml
DefaultHD/: Makefile.am  skin.xml  skin_plugins.xml  skin_templates.xml  skin_unchecked.xml
DefaultHD/buttons/: Makefile.am
DefaultHD/epg/: Makefile.am
DefaultHD/icons/: Makefile.am
DefaultHD/infobar/: Makefile.am
DefaultHD/menu/: Makefile.am
DefaultHD/screens/: Makefile.am
fonts/: Makefile.am
skin_default/: Makefile.am  skin.xml
skin_default/buttons/: Makefile.am
skin_default/countries/: Makefile.am
skin_default/epg/: Makefile.am
skin_default/extensions/: Makefile.am
skin_default/icons/: Makefile.am
skin_default/infobar/: Makefile.am
skin_default/menu/: Makefile.am
skin_default/piconbg/: Makefile.am
skin_default/screens/: Makefile.am
