installdir = $(datadir)/enigma2/DefaultHD/icons

dist_install_DATA = \
    expandable-plugins.png \
    expandable.png \
    expanded-plugins.png \
    expanded.png \
    plugin_expandable.png \
    plugin_expanded.png \
    plugin_vertical.png \
    starsbar_empty.png \
    starsbar_filled.png \
    verticalline-plugins.png \
    verticalline.png
