installdir = $(datadir)/enigma2/DefaultHD/icons

dist_install_DATA = \
    expandable-plugins.png \
    expandable.png \
    expanded-plugins.png \
    expanded.png \
    plugin_expandable.png \
    plugin_expanded.png \
    plugin_vertical.png \
    starsbar_empty.png \
    starsbar_filled.png \
    verticalline-plugins.png \
    verticalline.png \
    marker.png \
    mark_off.png \
    mark_on.png \
    lock_error.png \
    lock_on.png \
    lock_off.png
