installdir = $(datadir)/enigma2/DefaultHD/infobar

dist_install_DATA = \
    CoolPointerRec.png \
    icon_16-9.png \
    icon_2.0.png \
    icon_4-3.png \
    icon_5.1.png \
    icon_crypted.png \
    icon_dolbydigital.png \
    icon_dvb.c.png \
    icon_dvb.s.png \
    icon_dvb.t.png \
    icon_fhd1080.png \
    icon_hbbtv.png \
    icon_hd720.png \
    icon_iptv.png \
    icon_orbital.png \
    icon_qhd1440.png \
    icon_record.png \
    icon_sd576.png \
    icon_stereo.png \
    icon_subtitle.png \
    icon_teletext.png \
    icon_uhd4k.png \
    position_pointer.png