installdir = /usr/share/enigma2/skin_default/epg

install_DATA = \
    BorderBottom.png \
    BorderLeft.png \
    BorderRight.png \
    BorderTop.png \
    CurrentEvent.png \
    CurrentService.png \
    information.png \
    OtherEvent.png \
    OtherService.png \
    RecordEvent.png \
    SelectedBorderBottom.png \
    SelectedBorderLeft.png \
    SelectedBorderRight.png \
    SelectedBorderTop.png \
    SelectedCurrentEvent.png \
    SelectedEvent.png \
    SelectedInformation.png \
    SelectedRecordEvent.png \
    SelectedZapEvent.png \
    tab_more.png \
    tab_next.png \
    tab_now.png \
    timeline-now-pig.png \
    timeline-now.png \
    TimeLineDate.png \
    TimeLineTime.png \
    ZapEvent.png