installdir = $(datadir)/enigma2/skin_default/screens

dist_install_DATA = \
    b_b.png \
    b_bl.png \
    b_br.png \
    b_l.png \
    b_r.png \
    b_t.png \
    b_tl.png \
    b_tr.png \
    mute.png \
    mute2.png \
    unhandled-key.png \
    unhandled-key2.png \
    volume_background.png \
    volume_2.png \
    volume_up.png